<resources>
    <string name="app_name">Multimedia Market</string>
    <string name="txt_dont_have_acc">Don\'t have an account?</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_signin">Sign In</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Enter minimum 6 digit password</string>
    <string name="hint_repassword">Password Confirm</string>
    <string name="hint_username">Username</string>
    <string name="btn_google">Sign in with Google</string>
    <string name="txt_or">OR</string>
    <string name="btn_facebook">Sign in with Facebook</string>
    <string name="btn_more">More</string>
    <string-array name="unit">
        <item></item>
        <item>THOUSAND</item>
        <item>MILLION</item>
        <item>BILLION</item>
    </string-array>
    <string name="txt_readmore">READ MORE</string>
    <string name="txt_readless">READ LESS</string>
    <string name="txt_infor_rating">Rating this comment</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="txt_downloaded">Paid</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="btn_recharge">Recharge</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_help">Help</string>
    <string name="btn_about">About</string>
    <string name="btn_logout">Logout</string>
    <string name="edt_rating">Tell us what you think</string>
    <string name="txt_ratingsuccess">Thank you for rating this comment</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="txt_cardCategory">Payment</string>
    <string name="txt_cardValue">Value</string>
    <string name="txt_total">Wallet</string>
    <string name="txt_cardNumber">Card Num</string>
    <string name="txt_cardSeri">Seri Num</string>
    <string name="hint_cardNumber">Input card number</string>
    <string name="hint_cardSeri">Input seri number</string>
    <string name="txt_10k">$0.49</string>
    <string name="txt_20k">$0.99</string>
    <string name="txt_50k">$2.49</string>
    <string name="txt_100k">$4.99</string>
    <string name="txt_200k">$9.99</string>
    <string name="txt_500k">$24.99</string>
    <string name="err_empty">Empty</string>
    <string name="info_success">Congratulation!!! You successfully recharged</string>
    <string name="info_failure">Oops!!! We encountered an unexpected error. Please try again</string>
    <string name="info_wrong">Oh no!!! We are unable to validate your information. Please try again</string>
    <string name="btn_newRecharge">New recharge</string>
    <string name="txt_time">Time</string>
    <string name="txt_transactioncode">Transaction code</string>
    <string name="txt_feeRecharge">Transaction cost</string>
    <string name="txt_free">Free</string>
    <string name="txt_status">Status</string>
    <string name="txt_recharged">Recharged</string>
    <string name="txt_rechargeIntoWallet">RECHARGE HISTORY</string>
    <string name="txt_success">Success</string>
    <string name="txt_unRecharge">Unrecharge</string>
    <string name="txt_failure">Failure</string>
    <string name="txt_cardDetail">Card detail</string>
    <string name="txt_allowCheckout">Checkout by ONE-Click</string>
    <string name="txt_NotAllowCheckout">The Wallet need more energy!!! Recharge now</string>
    <string name="btn_checkout">Checkout</string>
    <string name="btn_install">Download</string>
    <string name="info_buyingSuccess">Congratulation!!! You successfully checkout</string>
    <string name="info_saved">Marked this comment</string>
    <string name="info_unSaved">Unmarked this product</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_gender">Gender</string>
    <string name="info_male">Male</string>
    <string name="info_female">Female</string>
    <string name="txt_game">Game</string>
    <string name="txt_image">Image</string>
    <string name="txt_video" translatable="false">Video</string>
    <string name="txt_music">Music</string>
    <string name="menu_edit">Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="hint_enter_username">Enter your username</string>
    <string name="info_editSuccess">Successfully updated!</string>
    <string name="hint_enter_email">Enter your email</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="info_others">Others</string>
    <string name="txt_password">Password</string>
    <string name="err_passnotsame">Password is not matching</string>
    <string name="err_notlength">"Password must be at least 6 characters "</string>
    <string name="txt_pathFile">File</string>
    <string name="hint_file">Choose your file</string>
    <string name="hint_video">Enter youtube link</string>
    <string name="txt_description">Description</string>
    <string name="hint_description">Enter description</string>
    <string name="txt_intro">Introduction</string>
    <string name="hint_intro">Enter introduction</string>
    <string name="txt_ageLimit">Age limit</string>
    <string name="txt_price">Price</string>
    <string name="txt_title">Title</string>
    <string name="hint_price">Enter amount of money</string>
    <string name="hint_title">Enter the amazing title</string>
    <string name="hint_ageLimit">Choose age limit</string>
    <string name="txt_Category">Category</string>
    <string name="hint_category">Choose category</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_pickImage">Choose from gallery</string>
    <string name="menu_takeImage">Take an image</string>
    <string name="menu_bookmark">Favorite list</string>
    <string name="menu_upload">Upload</string>
    <string-array name="thanksTickers">
        <item>tk_thanks1</item>
        <item>tk_thanks2</item>
        <item>tk_thanks3</item>
        <item>tk_thanks4</item>
        <item>tk_thanks5</item>
        <item>tk_thanks6</item>
        <item>tk_thanks7</item>
        <item>tk_thanks8</item>
        <item>tk_thanks9</item>
        <item>tk_thanks10</item>
    </string-array>
    <string name="menu_update">Update</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_successfully_delete_section">Deleted successfully old sections</string>
    <string name="dialog_successfully_update_section">Updated successfully new sections</string>
    <string name="dialog_successfully_update_product">Updated successfully product</string>
    <string name="dialog_successfully_update_product_detail">Updated successfully product detail</string>
    <string name="dialog_successfully_update_image_product">Updated successfully product image</string>
    <string name="dialog_successfully_update_image_product_detail">Updated successfully product detail image</string>
    <string name="dialog_successfully_upload_file">Uploaded successfully file</string>
    <string name="dialog_failure_update_image_product">Update failed product image</string>
    <string name="dialog_failure_update_image_product_detail">Update failed product detail image</string>
    <string name="dialog_failure_update_product">Update failed product</string>
    <string name="dialog_failure_delete_section_product">Deleted failed product section</string>
    <string name="dialog_failure_update_section_product">Updated failed product section</string>
    <string name="dialog_failure_delete_file">Uploaded failed file</string>
    <string name="menu_user_admin">User management tool</string>
    <string name="menu_active">Active</string>
    <string name="menu_inactive">Inactive</string>
    <string name="info_failure_signin">Failure signin</string>
    <string name="info_notfind_user">Cannot find user account</string>
    <string name="info_logout">You was logged out because the account didn\'t meet our requirement</string>
    <string name="err_username">Username required</string>
    <string name="err_email">Email required</string>
    <string name="err_password">Password required</string>
    <string name="menu_balance">Rechange balance</string>
    <string name="hint_balance">Enter amount of money</string>
    <string name="menu_role">Update role</string>
    <string name="info_fail_role">The account didn\'t meet out requirement to process this action</string>
    <string name="err_signup">Cannot sign up with your information.</string>
    <string name="info_downloadFileSuccess">Product successfully downloaded</string>
    <string name="info_downloadFireFailure">Product failure downloaded</string>
    <string name="btn_loading">Downloading...</string>
    <string name="menu_card_admin">Card management tool</string>
    <string name="menu_addCard">Add new card</string>
    <string name="info_successfully_create_card">Created Successfully card</string>
    <string name="info_failure_create_card">Created failure card</string>
    <string name="menu_editCard">Edit card</string>
    <string name="info_failure_edit_card">Edited successfully card</string>
    <string name="info_success_edit_card">Edited successfully card</string>
    <string name="info_successUpdateProduct">Updated successfully product</string>
    <string name="txt_search">Search</string>
    <string name="err_ageExceed">Do not allow the negative age</string>
    <string name="menu_product_admin">Product management tool</string>
</resources>
